# simple-backup

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
rbackup/: app.py  args.py  config.py  filesystem.py
rbackup/download/: app.py
rbackup/rotate/: app.py
rbackup/upload/: app.py
tests/: rotate_test.py
tests-env/: Makefile  docker-compose.yaml
