[tool.poetry]
name = "simple-backup"
version = "0.1.0"
description = ""
authors = ["blackandred <22807686+blackandred@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "simple_backup"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.136"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
